Package_Tools/include-C/vte-2.91-gtk4/vte/vtetypebuiltins-gtk4.h


/* This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */

#pragma once

#if !defined (__VTE_VTE_H_INSIDE__) && !defined (VTE_COMPILATION)
#error "Only <vte/vte.h> can be included directly."
#endif

#include <glib-object.h>

#include "vtemacros.h"



/* enumerations from "vteenums.h" */
extern
GType vte_cursor_blink_mode_get_type (void);
#define VTE_TYPE_CURSOR_BLINK_MODE (vte_cursor_blink_mode_get_type ())
extern
GType vte_cursor_shape_get_type (void);
#define VTE_TYPE_CURSOR_SHAPE (vte_cursor_shape_get_type ())
extern
GType vte_text_blink_mode_get_type (void);
#define VTE_TYPE_TEXT_BLINK_MODE (vte_text_blink_mode_get_type ())
extern
GType vte_erase_binding_get_type (void);
#define VTE_TYPE_ERASE_BINDING (vte_erase_binding_get_type ())
extern
GType vte_pty_error_get_type (void);
#define VTE_TYPE_PTY_ERROR (vte_pty_error_get_type ())
extern
GType vte_pty_flags_get_type (void);
#define VTE_TYPE_PTY_FLAGS (vte_pty_flags_get_type ())
extern
GType vte_write_flags_get_type (void);
#define VTE_TYPE_WRITE_FLAGS (vte_write_flags_get_type ())
extern
GType vte_regex_error_get_type (void);
#define VTE_TYPE_REGEX_ERROR (vte_regex_error_get_type ())
extern
GType vte_format_get_type (void);
#define VTE_TYPE_FORMAT (vte_format_get_type ())
extern
GType vte_align_get_type (void);
#define VTE_TYPE_ALIGN (vte_align_get_type ())


/* Generated data ends here */